<resources>
    <string name="app_name">PDF\nViewer</string>
    <string name="name_test">Download</string>
    <string name="number_test">6 Files</string>
    <string name="number">6</string>
    <string name="folder">Folder</string>
    <string name="empty"></string>
    <string name="view_from_internet">View from internet</string>
    <string name="determination">Determination</string>
    <string name="settings">Settings</string>
    <string name="frequently_asked_questions">Frequently Asked Questions</string>
    <string name="features">Features</string>
    <string name="about_as">About as</string>
    <string name="get_help">Get Help</string>
    <string name="select">Select</string>
    <string name="send_a_file">Send a file</string>
    <string name="opened_by_using">Opened by using</string>
    <string name="report_a_problem">Report a problem</string>
    <string name="vertical">Vertical</string>
    <string name="horizontal">Horizontal</string>
    <string name="you_problem">Write you problem</string>
    <string name="sending_comments">Sending Comments</string>
    <string name="help_request_content">Do you have any comments? We want to know your opinion, but please do not share any sensitive information. Do you have any legal questions or concerns? You can ask for help or support</string>
    <string name="display_f">Display</string>
    <string name="update">Update</string>
    <string name="version">Version 1.0.2 ( Vinegar )</string>
    <string name="developers">Developers</string>
    <string name="developer_content">This application was developed by an independent developer named Awais Hammouda, twenty years old. There is no official sponsor or specific company</string>
    <string name="shareholders">Shareholders</string>
    <string name="content_shareholders">Was assisted in a small circle at the University Translators will be mentioned in the event of translation in later versions</string>
    <string name="open_source">Open Source Licenses</string>
    <string name="content_open_soruce">This is a product that uses a lot of open source software if you are interested you can see it</string>
    <string name="link1">https://github.com/barteksc/AndroidPdfViewer</string>
    <string name="link2">https://github.com/itext/itextpdf</string>
    <string name="link3">https://www.vogella.com/tutorials/JavaPDF/article.html</string>
    <string name="display">Display</string>
    <string name="last_modified">Last Modified</string>
    <string name="alphabet">Alphabet</string>
    <string name="random">Random</string>
    <string name="speech_to_text">Speech To Text</string>
</resources>